ver_2_update typing customers and product